--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,3 +26,4 @@ serde_json = "1"
 axum = "0.8.6"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
 tauri-runtime = "2.9.1"
+tempfile = "3.23.0"
