--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "katex": "^0.16.25",
     "markdown-it": "^14.1.0",
-    "markdown-it-inject-linenumbers": "^0.3.0"
+    "markdown-it-inject-linenumbers": "^0.3.0",
+    "markdown-it-texmath": "^1.0.0",
+    "uuid": "^13.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@types/katex": "^0.16.7",
     "@types/markdown-it": "^14.1.2",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
